--- a/fhWeb.html
+++ b/fhWeb.html
@@ -363,14 +363,13 @@
         var table = response.getDataTable(); 
 	      var rows = table.getNumberOfRows();
         alert("rows " + rows);
-        var select = document.getElementById("projectSelectorDropdown"); 
+        var list = document.getElementById("projectSelectorDropdown"); 
         for (var i = 0; i < rows; i++){                
             var opt = table.getValue(i, 0);  
-            var el = document.createElement("option");
-            el.text = opt;
-            el.value = opt;
+            var li = document.createElement("li");
+            li.appendChild(document.createTextNode(opt));
             alert("option " + opt); 
-            select.appendChild(el);
+            list.appendChild(li);
         }
         }
       // !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -681,13 +680,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Site Select<span class="caret"></span></a>
               <ul class="dropdown-menu" id="projectSelectorDropdown">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+
               </ul>
             </li>         
           </ul>
