--- a/fhWeb.html
+++ b/fhWeb.html
@@ -39,8 +39,21 @@
     </script>
 
     <!-- Google Maps API -->
+    <!-- Drop the watermarks... -->
+    <style>
+    .gmnoprint a, .gmnoprint span {
+      display:none;
+      }
+    .gmnoprint div {
+      background:none !important;
+      }
+    img[src="http://maps.gstatic.com/mapfiles/api-3/images/google_white2.png"], a[href^="http://maps.google.com/maps"]{
+      display:none !important;
+      }
+    </style>
+    <!-- Embedding map canvas -->
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=visualization"></script> 
-      <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
     google.load('visualization', '1', {packages: ['corechart']});
     var map;
@@ -53,6 +66,10 @@
       var myOptions = { 
         zoom: 6, 
         center: latlng, 
+        disableDefaultUI: true,
+        navigationControl: false,
+        mapTypeControl: false,
+        streetViewControl: false,
         mapTypeId: google.maps.MapTypeId.ROADMAP,
         styles: [
           {
@@ -529,13 +546,13 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Project Select<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="#">Mexico City</a></li>
+                <li><a href="#">Tijuana</a></li>
+                <li><a href="#">Toluca</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">About</li>
-                <li><a href="http://www.fundacionhogares.org/">Fundación Hogares</a></li>
-                <li><a href="http://flocktracker.mit.edu/">Flocktracker</a></li>
+                <li><a href="http://www.fundacionhogares.org/" target="_blank">Fundación Hogares</a></li>
+                <li><a href="http://flocktracker.mit.edu/" target="_blank">Flocktracker</a></li>
               </ul>
             </li>       
           </ul>
