fixed drop down

--- a/fhWeb.html
+++ b/fhWeb.html
@@ -544,17 +544,11 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Tijuana</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Project Select<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Mexico City</a></li>
-                <li><a href="#">Tijuana</a></li>
-                <li><a href="#">Toluca</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">About</li>
-                <li><a href="http://www.fundacionhogares.org/" target="_blank">Fundación Hogares</a></li>
-                <li><a href="http://flocktracker.mit.edu/" target="_blank">Flocktracker</a></li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Site Select<span class="caret"></span></a>
+              <ul class="dropdown-menu" id="projectSelectorDropdown">
+
               </ul>
-            </li>       
+            </li>         
           </ul>
         </div><!--/.nav-collapse -->
       </div>
