--- a/fhWeb.html
+++ b/fhWeb.html
@@ -560,6 +560,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand" style="padding-top:8px;" href="http://flocktracker.mit.edu"><img src="img/ft_logoxl.png" style="width:32px;"/></a>
           <a class="navbar-brand" href="#">FH Flocktracker Dashboard</a>
         </div>
         <div class="navbar-collapse collapse">
@@ -574,8 +575,6 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
-    <div class="navbar-header" style="padding-top:8px;"><img src="img/ft_logoxl.png" style="width:70px;"/></div>
 
     <div id="map-canvas"></div>
 
@@ -695,6 +694,9 @@
   <br>
   <br>
   <br>
+
+  <div><table align="center"><tr><td><a href="http://flocktracker.mit.edu"><img src="img/ft_logoxl.png" style="width:100px"/></a></td></tr></table></div>
+  <center>Powered by Flocktracker.</center><br>
 
   <div><table align="center"><tr><td><a href="http://www.dusp.mit.edu"><img src="./img/partner_logos-01.png" style="opacity:0.4"/></a></td><td><a href="http://www.urbanlaunchpad.org/"><img src="./img/partner_logos-02.png" style="opacity:0.4"/></a></td><td><a href="http://smart.mit.edu/"><img src="./img/partner_logos-03.png" style="opacity:0.4"/></a></td><td><a href="http://smart.mit.edu/research/future-urban-mobility/future-urban-mobility.html"><img src="./img/partner_logos-04.png" style="opacity:0.4"/></a></td><td><a href="http://misti.mit.edu/mit-mexico"><img src="./img/partner_logos-05.png" style="opacity:0.4"/></a></td><td><a href="http://www.grupoprodi.com/"><img src="./img/partner_logos-06.png" style="opacity:0.4"/></a></td></tr></table></div>
   <center>Some of our past and current partners.</center><br>
